# ss18_hand

./: .gitignore  .gitmodules  README.md  close_hand.bash  middle_finger.bash  open_hand.bash
Hand_SDF/: logfile.txt  model.config  model.sdf
Hand_SDF/meshes/CAD/: limb0.stl  palm.stl
SDF_Hand/: logfile.txt  model.config  model.sdf
SDF_Hand/meshes/CAD/: limb0.stl  palm.stl
devel/: .catkin  .rosinstall  setup.sh
devel/include/roboy_communication_actions/: PerformMovementAction.h  PerformMovementActionFeedback.h  PerformMovementActionGoal.h  (+11 more)
src/finger_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/roboy_2_0_left_arm_elbow_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/roboy_hand/: CMakeLists.txt  README.md  finger.world  fiınger_plugin.xml  package.xml
src/roboy_hand/gesture_recognition/: README.MD  data_utils.py  leap_depth_train.ipynb  leap_rgb_train.ipynb  leap_rgb_train_resnet.ipynb  leap_rgb_train_vgg.ipynb  leap_train_depth.ipynb  live_feed.py  webcam.ipynb
src/roboy_hand/gesture_recognition/models/research/object_detection/: inputs.py
src/roboy_hand/gesture_recognition/models/research/object_detection/builders/: dataset_builder.py
src/roboy_hand/gesture_recognition/models/research/object_detection/legacy/: train.py
src/roboy_hand/gesture_recognition/models/research/pycocotools/: _mask.c
src/roboy_hand/gesture_recognition/old/: README.MD  leap_train_depth.ipynb  live_feed.ipynb
src/roboy_hand/gesture_recognition/old/real_dataset/: README.MD  leap_rgb_train_resnet.ipynb  leap_rgb_train_vgg.ipynb
src/roboy_hand/gesture_recognition/old/toy_dataset/: README.MD  toy_gray.ipynb  toy_rgb.ipynb
src/roboy_hand/gesture_recognition/old/toy_dataset/models/: vgg.py
src/roboy_hand/gesture_recognition/run/: README.MD  detect_gestures.py
src/roboy_hand/gesture_recognition/run/model-checkpoint/: model.ckpt-51936.index
src/roboy_hand/gesture_recognition/run/utils/: detector_utils.py
src/roboy_hand/gesture_recognition/train/: README.MD  clean_dataset.py  generate_test_tfrecord.py  generate_train_tfrecord.py  get_rgb_images_from_kinect_dataset.py  xml_to_csv.py
src/roboy_hand/gesture_recognition/train/data/: hands_label_map.pbtxt  test_labels.csv  train_labels.csv
src/roboy_hand/gesture_recognition/train/rgb_kinect_leap_dataset_labels/: P10_G10_0.xml  P10_G10_1.xml  P10_G10_2.xml  P10_G10_3.xml  P10_G10_4.xml  P10_G10_5.xml  P10_G10_6.xml  P10_G10_7.xml  P10_G10_8.xml  P10_G10_9.xml  P10_G1_0.xml  P10_G1_1.xml  P10_G1_2.xml  P10_G1_3.xml  P10_G1_4.xml  P10_G1_5.xml  P10_G1_6.xml  P10_G1_7.xml  P10_G1_8.xml  P10_G1_9.xml  P10_G2_0.xml  P10_G2_1.xml  P10_G2_2.xml  P10_G2_3.xml  P10_G2_4.xml  P10_G2_5.xml  P10_G2_6.xml  P10_G2_7.xml  P10_G2_8.xml  P10_G2_9.xml  P10_G3_0.xml  P10_G3_1.xml  P10_G3_2.xml  P10_G3_3.xml  P10_G3_4.xml  P10_G3_5.xml  P10_G3_6.xml  P10_G3_7.xml  P10_G3_8.xml  P10_G3_9.xml  (+1360 more)
src/roboy_hand/gesture_recognition/train/training/: ssd_mobilenet_v1_coco.config
src/roboy_hand/include/roboy_hand/: finger_plugin.hpp
src/roboy_hand/launch/: LeftHand.launch  gesture_execution.launch
src/roboy_hand/src/: finger_plugin.cc  finger_plugin.cpp  ges_lut.txt  gesture_control.cpp  gesture_execution_client.cpp  gesture_execution_server.cpp  gesture_mimic_server.cpp  jointAngleCalculation.cpp
src/roboy_hand/src/Hand_SDF_with_distinct_names/: logfile.txt  model.config  model.sdf
src/roboy_hand/src/Hand_SDF_with_distinct_names/meshes/CAD/: limb0_index.stl  limb0_little.stl  limb0_middle.stl  limb0_ring.stl  limb0_thumb.stl  limb1_index.stl  limb1_little.stl  limb1_middle.stl  limb1_ring.stl  limb1_thumb.stl  limb2_index.stl  limb2_little.stl  limb2_middle.stl  limb2_ring.stl  limb2_thumb.stl  limb3_index.stl  limb3_little.stl  limb3_middle.stl  limb3_ring.stl  limb3_thumb.stl
src/roboy_hand/srv/: GestureExecution.srv  GestureMimic.srv
src/roboy_hand_left_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/roboy_xylophone_left_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+1011 files in other folders)
